--- a/src/app/components/app.scss
+++ b/src/app/components/app.scss
@@ -1,3 +1,7 @@
 .app {
-  background-color: blanchedalmond;
+  // background-color: blanchedalmond;
+  // margin: 0;
+  .top-track-list-container {
+    margin-top: -200px;
+  }
 }
