--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,5 +1,7 @@
 :global {
   body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(240, 238, 238);
   }
 }
