add basis for track searching

--- a/src/app/components/app.scss
+++ b/src/app/components/app.scss
@@ -1,7 +1,12 @@
 .app {
   // background-color: blanchedalmond;
   // margin: 0;
+  .track-search-container {
+    margin-top: -350px;
+    margin-bottom: 80px;
+  }
+
   .top-track-list-container {
-    margin-top: -200px;
+    margin-bottom: 50px;
   }
 }
