--- a/src/app/components/header/header.styles.scss
+++ b/src/app/components/header/header.styles.scss
@@ -1,7 +1,9 @@
 .header {
   color: white;
-  height: 650px;
+  height: 600px;
   background-image: url('../../../assets/images/index.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   background-position-y: bottom;
 }
 
