--- a/src/app/components/track-card/track-card.styles.scss
+++ b/src/app/components/track-card/track-card.styles.scss
@@ -4,6 +4,7 @@
   height: 200px;
   background-color: rgba($color: #000000, $alpha: 0.4);
   border: 1px solid black;
+  cursor: pointer;
 }
 
 .album-cover {
