--- a/src/app/components/header/navbar/navbar.styles.scss
+++ b/src/app/components/header/navbar/navbar.styles.scss
@@ -1,5 +1,5 @@
 .navbar {
-  position: absolute;
+  position: fixed;
   right: 15px;
   top: 5px;
   padding: 12px 15px;
@@ -9,6 +9,8 @@
 }
 
 .link {
+  height: 100%;
+  padding: 15px;
   color: white;
   text-decoration: none;
 }
