Add loading more items to tracks

--- a/src/app/components/user-tracks-page/user-tracks-page.scss
+++ b/src/app/components/user-tracks-page/user-tracks-page.scss
@@ -13,13 +13,13 @@
 
   display: flex;
 
-  .track-list {
+  .track-list-container {
     height: 100%;
     overflow: auto;
     flex: 1;
   }
 
-  .selected-track-container {
+  .selected-track-info-container {
     flex: 1.75;
     overflow: auto;
     height: 100%;
