--- a/src/app/components/user-tracks-page/track-line/track-line.styles.scss
+++ b/src/app/components/user-tracks-page/track-line/track-line.styles.scss
@@ -1,7 +1,7 @@
 .track-line {
   height: 64px;
   cursor: pointer;
-  padding: 15px;
+  padding: 5px 15px;
   display: flex;
   align-items: center;
 
