--- a/src/app/components/header/navbar/navbar.styles.scss
+++ b/src/app/components/header/navbar/navbar.styles.scss
@@ -2,15 +2,28 @@
   position: fixed;
   right: 15px;
   top: 5px;
-  padding: 12px 15px;
+  // padding: 0 5px;
   font-size: 18px;
   border-radius: 20px;
   background-color: rgba(0, 0, 0, 0.6);
+  overflow: hidden;
 }
 
 .link {
   height: 100%;
-  padding: 15px;
+  padding: 12px 8px;
   color: white;
   text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  transition: all 0.15s;
+
+  &-label {
+    margin-left: 5px;
+  }
+
+  &:hover {
+    background-color: white;
+    color: black;
+  }
 }
