Fix some small issues

--- a/src/app/components/user-tracks-page/user-tracks-page.scss
+++ b/src/app/components/user-tracks-page/user-tracks-page.scss
@@ -1,15 +1,15 @@
 .user-tracks-page {
-  width: 85%;
-  margin: 0 auto;
-  margin-top: -250px;
-  background-color: white;
-  box-sizing: border-box;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
-  border-radius: 10px;
-  margin-bottom: 50px;
-  overflow: hidden;
+  // width: 85%;
+  // margin: 0 auto;
+  // margin-top: -250px;
+  // background-color: white;
+  // box-sizing: border-box;
+  // box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+  // border-radius: 10px;
+  // margin-bottom: 50px;
+  // overflow: hidden;
 
-  height: 800px;
+  height: 78vh;
 
   display: flex;
 
