--- a/src/app/components/header/navbar/navbar.styles.scss
+++ b/src/app/components/header/navbar/navbar.styles.scss
@@ -4,9 +4,10 @@
   top: 5px;
   // padding: 0 5px;
   font-size: 18px;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.6);
   overflow: hidden;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8)
 }
 
 .link {
@@ -23,7 +24,7 @@
   }
 
   &:hover {
-    background-color: white;
+    background: rgba(255, 255, 255, 0.95);
     color: black;
   }
 }
