--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,4 +4,20 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(240, 238, 238);
   }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  .content-container {
+    width: 85%;
+    margin: 0 auto;
+    margin-top: -450px;
+    background-color: white;
+    box-sizing: border-box;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    margin-bottom: 50px;
+    overflow: hidden;
+  }
 }
