--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -11,6 +11,7 @@
 
   .content-container {
     width: 85%;
+    min-height: 75vh;
     margin: 0 auto;
     margin-top: -450px;
     background-color: white;
